<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightPink"
    tools:context=".views.SignUpActivity">

    <LinearLayout
        android:background="@color/lightPink"
        android:id="@+id/sign_up_info_ll"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <EditText
            android:id="@+id/sign_up_firstname_tv"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/first_name"
            android:layout_marginBottom="20dp"
            />

        <EditText
            android:id="@+id/sign_up_lastname_tv"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/last_name"
            android:layout_marginBottom="20dp"
            />

        <Button
            android:id="@+id/sign_up_submit_btn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:backgroundTint="@color/lightPink"
            android:textColor="@color/black"
            android:textSize="23dp"

            android:text="@string/submit"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>