...
            android:fontFamily="sans-serif-condensed-medium"
            android:text="All"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="15dp"/>

        <Button
            android:id="@+id/user_home_attending_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightGrey"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="Attendee"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/user_home_organizing_btn"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/lightGrey"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_height="wrap_content"
            android:text="Organizer"/>
...
        app:itemRippleColor="@android:color/transparent"
        app:itemActiveIndicatorStyle="@style/App.Custom.Indicator"
        app:labelVisibilityMode="unlabeled"/>

    <!-- Add button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/user_home_add_event_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/user_home_bnv"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="8dp"
...
