...
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        >-->
    <!--        -->
    <!--    </FrameLayout>-->

    <ScrollView
        android:id="@+id/view_scroll_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_event_announcement_tv1"
                android:text="See checked in users"
                />

            <Button
                android:id="@+id/view_event_see_signed_up_attendees_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="See signed up users"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_event_see_checked_in_attendees_btn"
...
