...
            android:textSize="35sp"
            android:layout_marginBottom="10dp"
            android:maxLines="1"
            />

        <CheckBox
            android:id="@+id/view_event_signed_up_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/attending"
            android:layout_below="@id/view_event_name_tv"
...
